@@ -18,6 +18,7 @@
 13. When using +/- buttons in volume dialog, round to nearest 5%
 14. Only react to status volume changes if more than half a second since volume
     was set.
+15. Use circular progress, in middle of screen, when fetching browse items.
 
 0.0.6
 -----
